fix sidenav items alignment

--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -176,11 +176,10 @@
     background-color: black;
     color: #ffffff;
     font-family: 'Roboto', sans-serif;
-    max-width: 20%;
+    max-width: 15%;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
-    align-items: center;
     justify-content: space-between;
     height: 100%;
 }
